[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "debugger-decorator"
version = "0.1.4"
authors = [
  { name="Michail Panagiotis Bofos", email="mbofos@gmail.com" },
]
description = "A comprehensive Python function debugger with colors, variable tracking, and file output"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "colorama",
    "pretty_errors"
]

[project.urls]
Homepage = "https://github.com/mbofos01/debugger-decorator"

[tool.setuptools.packages.find]
